# scitest

./: .gitignore  CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  todo.txt
doc/: config.rst  data_format.rst  terminology.rst
src/scitest/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  fixture.py  io.py  print_util.py  serialize.py  suite.py  tester.py  version.py
src/scitest/query/: __init__.py  base.py  common.py  load.py  properties.py  quantity.py  query_set.py  results.py
