[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitest"
description = "Framework to test scientific codes with tolerance on numerical outputs"
readme = {file="README.md", content-type="text/markdown"}
authors = [
    { name="Aaron Schankler", email="ams19@sas.upenn.edu" },
]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.11"
dependencies = [
    "attrs",
    "schema",
    "strictyaml",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/aschankler/scitest"
"Bug Tracker" = "https://github.com/aschankler/scitest/issues"

[tool.setuptools.dynamic]
version = {attr = "scitest.__version__"}

[tool.black]
line-length = 88
target-version = ['py310', 'py311']

[tool.isort]
atomic = true
profile = "black"

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "line-too-long",
    "missing-docstring",
    "no-else-return",
]

[tool.mypy]
mypy_path = "src"

# Import global settings
#disallow_any_unimported = true
ignore_missing_imports = true

# Stricter checking
disallow_untyped_defs = true
#disallow_untyped_calls = true
#strict_optional = true
warn_return_any = true
warn_no_return = true
#warn_redundant_casts = true
#warn_unreachable = true

# Meta-checking
show_error_codes = true
warn_unused_ignores = true
